--- a/index.html
+++ b/index.html
@@ -267,5 +267,7 @@ SELECT COUNT(1) FROM students WHERE first_name == @FirstName;
 <h4>The syntax of order</h4>
 
 <p>The chain of methods OrderBy and OrderByDescending is supported.</p>
+
+<p>Copyright &copy; 2016, <a href="mailto:akhmetov@live.com">Albert Akhmetov</a>. Licensed under the <a href="http://www.apache.org/licenses/LICENSE-2.0">Apache License, Version 2.0</a>.</p>
 </body>
 </html>
